--- a/foodtaskerapp/templates/home.html
+++ b/foodtaskerapp/templates/home.html
@@ -1,8 +1,14 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <title>Home Page</title>
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}">
+
+    </script>
   </head>
   <body>
     <h1>Hello, Python!</h1>
