--- a/foodtaskerapp/templates/restaurant/sign_in.html
+++ b/foodtaskerapp/templates/restaurant/sign_in.html
@@ -9,6 +9,10 @@
     <script type="text/javascript" src="{% static 'js/bootstrap.min.js' %}"></script>
   </head>
   <body>
-    <h1>Hello, Python!</h1>
+    <form method="post">
+      {% csrf_token %}
+      {{ form }}
+      <button type="submit">Sign In</button>
+    </form>
   </body>
 </html>
